add ent. and atlas and user API
