# api/src/docs/swagger.yaml
@@ -1,5 +1,29 @@
 basePath: /api/v1
 definitions:
+  api_internal_handlers_user.UserResponse:
+    properties:
+      created_at:
+        example: "2024-06-23T23:18:49+09:00"
+        type: string
+      email:
+        example: taro@example.com
+        type: string
+      first_name:
+        example: 太郎
+        type: string
+      id:
+        example: 1
+        type: integer
+      last_name:
+        example: 田中
+        type: string
+      uid:
+        example: Xa12kK9ohsIhldD4
+        type: string
+      updated_at:
+        example: "2024-06-23T23:18:49+09:00"
+        type: string
+    type: object
   index.PostIndexResponse:
     properties:
       message:
@@ -13,6 +37,43 @@ definitions:
         type: string
     required:
     - text
+    type: object
+  user.CreateUserRequestBody:
+    properties:
+      email:
+        example: taro@example.com
+        type: string
+      first_name:
+        example: 太郎
+        type: string
+      last_name:
+        example: 田中
+        type: string
+      uid:
+        example: Ax1abc9uiowd9lKE
+        type: string
+    required:
+    - email
+    - first_name
+    - last_name
+    - uid
+    type: object
+  user.MessageResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  user.UpdateUserRequestBody:
+    properties:
+      email:
+        example: taro@example.com
+        type: string
+      first_name:
+        example: 太郎
+        type: string
+      last_name:
+        example: 田中
+        type: string
     type: object
 host: localhost
 info:
@@ -42,4 +103,104 @@ paths:
           description: Internal Server Error
       tags:
       - index
+  /user:
+    post:
+      description: ユーザー作成
+      parameters:
+      - description: 作成するユーザー情報
+        in: body
+        name: CreateUser
+        required: true
+        schema:
+          $ref: '#/definitions/user.CreateUserRequestBody'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/api_internal_handlers_user.UserResponse'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      tags:
+      - user
+  /user/:uid:
+    delete:
+      description: 対象ユーザー削除
+      parameters:
+      - description: uid
+        in: path
+        name: uid
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.MessageResponse'
+        "404":
+          description: Not Found
+        "405":
+          description: Method Not Allowed
+        "500":
+          description: Internal Server Error
+      tags:
+      - user
+    get:
+      description: 有効な対象ユーザー取得
+      parameters:
+      - description: uid
+        in: path
+        name: uid
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_internal_handlers_user.UserResponse'
+        "404":
+          description: Not Found
+        "405":
+          description: Method Not Allowed
+        "500":
+          description: Internal Server Error
+      tags:
+      - user
+    put:
+      description: 対象ユーザー更新
+      parameters:
+      - description: 更新するユーザー情報
+        in: body
+        name: UpdateUser
+        required: true
+        schema:
+          $ref: '#/definitions/user.UpdateUserRequestBody'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_internal_handlers_user.UserResponse'
+        "404":
+          description: Not Found
+        "405":
+          description: Method Not Allowed
+        "500":
+          description: Internal Server Error
+      tags:
+      - user
+  /users:
+    get:
+      description: 有効な全てのユーザー取得
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/api_internal_handlers_user.UserResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+      tags:
+      - user
 swagger: "2.0"
