# api/src/router/router.go
@@ -3,6 +3,7 @@ package router
 import (
     "github.com/labstack/echo/v4"
     "api/internal/handlers/index"
+    "api/internal/handlers/user"
 )
 
 func SetupRouter(e *echo.Echo) {
@@ -11,4 +12,11 @@ func SetupRouter(e *echo.Echo) {
 
     v1 := e.Group("/api/v1")
     v1.POST("/hello", indexHandler.PostIndex)
+
+    userHandler := user.NewUserHandler(e)
+    v1.POST("/user", userHandler.CreateUser)
+    v1.GET("/user/:uid", userHandler.GetUser)
+    v1.GET("/users", userHandler.GetUsers)
+    v1.PUT("/user/:uid", userHandler.UpdateUser)
+    v1.DELETE("/user/:uid", userHandler.DeleteUser)
 }
